force-app/RecordActions/default/objects/sflib_RecordActionConfig__c/sflib_RecordActionConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the SFLib Record Actions feature</description>
    <label>Record Action Settings</label>
</CustomObject>