force-app/RecordActions/default/objects/sflib_RecordActionConfig__c/fields/Highlight__c.field-meta.xml
<CustomField>
    <fullName>SeeAll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the user to see all actions, via selecting the option in the menu</description>
    <inlineHelpText>Allows the user to see all actions for the given Object, no matter it the conditions apply</inlineHelpText>
    <label>See All Actions</label>
    <type>Checkbox</type>
</CustomField>