force-app/RecordActions/default/objects/sflib_RecordActionConfig__c/fields/HistoryLog__c.field-meta.xml
<CustomField>
    <fullName>HistoryLog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logs the triggered action in the sflib_RecordActionHistory__c SObject</description>
    <inlineHelpText>Logs the actions in the Record Action History object</inlineHelpText>
    <label>Enable History</label>
    <type>Checkbox</type>
</CustomField>