force-app/RecordActions/default/objects/sflib_RecordActionConfig__c/fields/MilitaryTime__c.field-meta.xml
<CustomField>
    <fullName>MilitaryTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates which time format is being used in the history log data table</description>
    <inlineHelpText>Military time uses a 24-hour format (0000 to 2300) to eliminate ambiguity, whereas AM/PM relies on a 12-hour cycle that requires specifying morning or afternoon.</inlineHelpText>
    <label>Use 24 Hour Format</label>
    <type>Checkbox</type>
</CustomField>